--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,5 +12,18 @@
         android:layout_gravity="center"
         tools:text="You are in :)!"/>
 
+    <Button android:id="@+id/btnScanId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="100dp"
+        android:layout_gravity="bottom|center_horizontal"
+        android:text="@string/btn_scan_id"/>
+
+    <Button android:id="@+id/btnLogout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/margin_big"
+            android:layout_gravity="bottom|center_horizontal"
+            android:text="@string/btn_logout"/>
 
 </FrameLayout>
