--- a/peermountain_sdk/src/main/res/values/colors.xml
+++ b/peermountain_sdk/src/main/res/values/colors.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#0049C5DE</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#49C5DE</color>
+    <color name="text_color">#FFFFFF</color>
     <color name="white">#FFFFFF</color>
+    <color name="keyword">#33FFFFFF</color>
     <color name="fb">#48649C</color>
+    <color name="dot_line">#59FFFFFF</color>
+    <color name="keyboard_color">#E1E1E1</color>
+    <color name="keyboard_text_color">#000000</color>
+    <color name="keyboard_text_hint_color">#69747A</color>
+    <color name="green">#00940c</color>
+
 </resources>
