--- a/peermountain_sdk/src/main/res/values/dimens.xml
+++ b/peermountain_sdk/src/main/res/values/dimens.xml
@@ -9,10 +9,14 @@
     <dimen name="margin_xbig">40dp</dimen>
     <dimen name="margin_micro">4dp</dimen>
 
-    <dimen name="inner_icon_size">20dp</dimen>
+    <dimen name="inner_icon_size">40dp</dimen>
+    <dimen name="toolbar_size">40dp</dimen>
 
     <dimen name="big_text">18sp</dimen>
     <dimen name="regular_text">14sp</dimen>
     <dimen name="shadow_size">15dp</dimen>
 
+    <dimen name="dot_size">15dp</dimen>
+    <dimen name="keyboard_icon_size">40dp</dimen>
+    <dimen name="confirm_btn_size">60dp</dimen>
 </resources>
