--- a/peermountain_sdk/src/main/res/values/styles.xml
+++ b/peermountain_sdk/src/main/res/values/styles.xml
@@ -14,6 +14,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginTop">@dimen/margin_normal</item>
+        <item name="android:textColor">@color/text_color_dark</item>
         <item name="android:visibility">gone</item>
     </style>
 
