--- a/peermountain_sdk/src/main/res/layout/pm_fragment_register_keywords.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_fragment_register_keywords.xml
@@ -73,9 +73,6 @@
         tools:visibility="visible"/>
 
     <ImageView android:id="@+id/pmIvValid"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/confirm_btn_size"
-        android:background="@drawable/pm_keywords_btn_selector"
-        android:padding="@dimen/margin_normal"
+        style="@style/square_btn"
         android:src="@drawable/pm_ic_check_24dp"/>
 </LinearLayout>
